# modern_c

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md
src/: challenge_1.c  challenge_2.c  challenge_4.c  challenge_5.c  challenge_6.c  challenge_7.c  tmp.c
src/utils/: list.c  list.h
tests/: main.c
